Thu Sep 19 08:33:14 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc:  Update to RDoc 4.1.0.preview.1

	  RDoc 4.1.0 contains a number of enhancements including a new default
          style and accessibility support.  You can see the changelog here:

	  https://github.com/rdoc/rdoc/blob/v4.1.0.preview.1/History.rdoc

	* test/rdoc:  ditto.

Thu Sep 19 07:16:26 2013  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych.rb: updating Psych version

	* ext/psych/psych.gemspec: ditto

Thu Sep 19 06:39:40 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/dependency_resolver.rb:  Switch the iterative resolver
	  algorithm from recursive to iterative to avoid possible
	  SystemStackError.

Thu Sep 19 06:29:30 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems 2.2.0.preview.1

	  This brings several new features to RubyGems summarized here:

	  https://github.com/rubygems/rubygems/blob/v2.2.0.preview.1/History.txt

	* test/rubygems:  ditto.

Wed Sep 18 23:14:58 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* string.c (rb_str_enumerate_lines): make String#each_line and
	  #lines not raise invalid byte sequence error when it is called
	  with an argument. The patch also causes performance improvement.
	  [ruby-dev:47549] [Bug #8698]

	* test/ruby/test_m17n_comb.rb (test_str_each_line): remove
	  assertions which check that String#each_line and #lines will
	  raise an error if the receiver includes invalid byte sequence.

Wed Sep 18 16:32:15 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (mnew_from_me): allocate structs after allocated wrapper
	  object successfully, to get rid of potential memory leak.

Tue Sep 17 15:54:03 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/shell/command-processor.rb (Shell::CommandProcessor#find_system_command):
	  return executable file only, should ignore directories and
	  unexecutable files.  [ruby-core:57235] [Bug #8918]
